Include new * selector attributes to handle scrolling on iOS (hopefully fixes a previous problem I thought was resolved).

--- a/styles/shrekjr.styl
+++ b/styles/shrekjr.styl
@@ -2,6 +2,11 @@ html, body
   height: 100vh
   overflow: hidden
 
+*
+    box-sizing: border-box
+    scroll-behavior: smooth
+    -webkit-overflow-scrolling: touch
+
 body
     display: flex
     justify-content: center
@@ -51,8 +56,8 @@ nav
     overflow-y: scroll
     margin-top: 48px
     max-width: 650px
-    scroll-behavior: smooth
-    -webkit-overflow-scrolling: touch
+    //scroll-behavior: smooth
+    //-webkit-overflow-scrolling: touch
     .content-bg
         background: rgb(242,245,226)
         background: linear-gradient(180deg, rgba(242,245,226,1) 50%, rgba(211,217,141,1) 75%, rgba(185,194,68,1) 100%)
